[package]
name = "rosu-map"
version = "0.2.0"
edition = "2021"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MaxOhn/rosu-map"
documentation = "https://docs.rs/rosu-map/"
description = "Library to de- and encode .osu files"
keywords = ["osu", "parse", "beatmap", "decode"]
categories = ["parser-implementations", "parsing"]

[dependencies]
tracing = { version = "0.1.40", default-features = false, optional = true }

[dev-dependencies]
test-log = { version = "0.2.14", default-features = false, features = ["trace"] }